# speech

./: .gitignore  0_Inference_QWen2.5.py  10_SenceVoice_QWen2.5_cosyVoice.py  10_SenceVoice_QWen2.5_cosyVoice_ollama.py  11_SenceVoice_QWen2.5_pytts3.py  11_SenceVoice_QWen2.5_pytts3_ollama.py  12_SenceVoice_QWen2.5_edgeTTS.py  12_SenceVoice_QWen2.5_edgeTTS_ollama.py  13_1_SenceVoice_QWen2.5_kokoro_realTime.py  13_SenceVoice_QWen2.5_edgeTTS_realTime_ollama.py  15.1_SenceVoice_kws_CAM++.py  1_Inference_CosyVoice.py  3_Inference_edgeTTS.py  4_Inference_QWen2Audio.py  6_Inference_funasr.py  README.md  config.json  requirements.txt  run_realtime.py  setup.sh
archive/: 6_Inference_funasr.py
cpp/: CMakeLists.txt
cpp/include/: asr_engine.h  audio_io.h  config.h  llm_engine.h  speaker_verifier.h
cpp/src/: asr_engine.cpp  llm_engine.cpp  speaker_verifier.cpp  tts_engine.cpp  voice_pipeline.cpp
docs/: LEARNING_ROADMAP.md  SESSION_RESUME.md
knowledge_base/: knowledge.txt
scripts/: README.md  export_embedding_model.py  full_pipeline.py  full_pipeline_kws_sv.py  run_realtime.py  test_ollama_pipeline.py  test_pipeline.py
src/: .gitignore  CMakeLists.txt  __init__.py  asr.py  audio_io.py  benchmark.cpp  config.py  kws.py  llm.py  main.cpp  memory.py  pipeline.py  piper_server.py  server_main.cpp  speaker.py  test_skills.cpp  test_streaming_asr.cpp  test_utf8.cpp  test_vad.cpp  test_voice_emotion.cpp  tts.py
src/audio/: audio_io.cpp  audio_io.h  denoiser.h  vad.cpp  vad.h
src/brain/: llm_engine.cpp  llm_engine.h  skill_base.h  skill_manager.cpp  skill_manager.h  skill_utils.h
src/brain/skills/: skill_calculator.cpp  skill_calculator.h  skill_entertainment.cpp  skill_entertainment.h  skill_fortune.cpp  skill_fortune.h  skill_games.cpp  skill_games.h  skill_memory.cpp  skill_memory.h  skill_notes.cpp  skill_notes.h  skill_poetry.cpp  skill_poetry.h  skill_rag.cpp  skill_rag.h  skill_reminder.cpp  skill_reminder.h  skill_riddle.cpp  skill_riddle.h  skill_search.cpp  skill_search.h  skill_system.cpp  skill_system.h  skill_time.cpp  skill_time.h  skill_weather.cpp  skill_weather.h
src/include/: asr_engine.h  chat_memory.h  config.h  tts_engine.h  voice_pipeline.h  wake_word.h
src/llm/: embedding_engine.cpp  embedding_engine.h  function_caller.cpp  function_caller.h  llm_engine.cpp  llm_engine.h  multi_agent.cpp  multi_agent.h  onnx_embedding.cpp  onnx_embedding.h  prompt_builder.cpp  prompt_builder.h  react_engine.cpp  react_engine.h  reflection.cpp  reflection.h  token_counter.cpp  token_counter.h
src/memory/: chat_memory.cpp  chat_memory.h  document_chunker.cpp  document_chunker.h  user_memory.cpp  user_memory.h  vector_store.h
src/pipeline/: config.cpp  config.h  voice_pipeline.cpp  voice_pipeline.h
src/scripts/: piper_server.py  piper_tts.py
src/server/: streaming_session.h  ws_server.cpp  ws_server.h
src/speech/: asr_engine.cpp  asr_engine.h  espeak_min.h  prosody.h  speaker_verifier.cpp  streaming_asr.cpp  streaming_asr.h  tts_engine.cpp  tts_engine.h  voice_emotion.h  voiceprint_library.cpp  voiceprint_library.h  wake_word.cpp
src/src/: audio_io.cpp  chat_memory.cpp  config.cpp  llm_engine.cpp  tts_engine.cpp  voice_pipeline.cpp  wake_word.cpp
src/utils/: config_watcher.cpp  config_watcher.h  http_client.h  logger.h  utf8_utils.h  wav_utils.h
